# QtAirBrowser

./: Admin.cpp  Admin.h  AircraftDesigner.cpp  AircraftDesigner.h  AircraftProduct.cpp  AircraftProduct.h  BaseUser.cpp  BaseUser.h  CMakeLists.txt  Commercial.cpp  Commercial.h  DatabaseManager.h  Fighter.cpp  Fighter.h  ISerializable.h  User.cpp  User.h  ValidationException.h  admin_dashboard.cpp  admin_dashboard.h  admin_dashboard.ui  dashboard.cpp  dashboard.h  dashboard.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  product_editor_dialog.cpp  product_editor_dialog.ui  productmanager_window.cpp  productmanager_window.h  productmanager_window.ui  register_window.cpp  register_window.h  register_window.ui
forms/: mainwindow.ui  productmanager_window.ui
headers/: AircraftDesigner.h  DatabaseManager.h  Fighter.h  User.h  ValidationException.h  dashboard.h  mainwindow.h  product_editor_dialog.h  productmanager_window.h
rcs/: images.qrc  users.txt
sources/: AircraftProduct.cpp  BaseUser.cpp  Commercial.cpp  DatabaseManager.cpp  User.cpp  dashboard.cpp  main.cpp  mainwindow.cpp  productmanager_window.cpp  register_window.cpp
